5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1595_825.log
== SUBMITION (2019-03-26 17:20:46) 
-- CODE:
import math
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3

-- EXECUTION TIME:
0.206871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 3, in <module>
    b = pi*a**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:20:57) 
-- CODE:
import math
a = float(input("x"))
b = pi*a**2
c = (4/3)*pi*a**3

-- EXECUTION TIME:
0.140341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 3, in <module>
    b = pi*a**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:21:15) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = (4/3)*pi*a**3

-- EXECUTION TIME:
0.15536
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:21:17) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3

-- EXECUTION TIME:
0.182461
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:21:56) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3

-- EXECUTION TIME:
0.14003
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:22) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(b)
print(c)


-- EXECUTION TIME:
0.147822
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:30) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(b)
print(c)


-- EXECUTION TIME:
0.127847
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:31) 
-- CODE:
import math
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(b)
print(c)


-- EXECUTION TIME:
0.185662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 3, in <module>
    b = pi*a**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:08) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.143675
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:08) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.133685
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:09) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.242519
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:09) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.118872
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/825/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:09) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.269646
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:09) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.139301
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/825/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:09) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.18952
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:09) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.188527
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:10) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.20433
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:10) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.219991
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:10) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.246553
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:10) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.338474
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:10) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.311877
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:11) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.25972
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:11) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.284763
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:11) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.382513
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:11) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.298408
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/825/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:11) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.333595
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:11) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.405258
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:12) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.343977
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:23:12) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:12) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.366257
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:12) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.382086
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:12) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.415877
-- ERROR:
  File "/home/codebench/codes/1595/825/main.py", line 1
    import math*
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:12) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.383073
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1595/825/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:23:13) 
-- CODE:
import math*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:16) 
-- CODE:
import math
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.117904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 3, in <module>
    b = pi*a**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:17) 
-- CODE:
import math
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.17752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/825/main.py", line 3, in <module>
    b = pi*a**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:23:17) 
-- CODE:
import math
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b = pi*a**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:56) 
-- CODE:
from math import*
a = float(input("x"))
b = pi*a**2
c = 4/3*pi*a**3
print(round(b,3))
print(round(c,3))


-- EXECUTION TIME:
0.174589
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
